k8s/deployment-nginx.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mi-nginx
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mi-nginx-app
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 25%
  template:
    metadata:
      labels:
        app: mi-nginx-app
        version: v1
    spec:
      containers:
        - name: mi-contenedor-nginx
          image: nginx:mainline-bookworm-perl
          imagePullPolicy: Always
          ports:
            - containerPort: 80
