k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mi-despliegue
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mi-app
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 25%
  template:
    metadata:
      labels:
        app: mi-app
        version: v1
    spec:
      containers:
        - name: mi-contenedor
          image: ghcr.io/jarvisbot01/security:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
      imagePullSecrets:
        - name: ghcr-secret
