k8s/service-apache.yml
apiVersion: v1
kind: Service
metadata:
  name: mi-servicio-apache
  namespace: default
spec:
  selector:
    app: mi-apache-app
  ports:
    - protocol: TCP
      port: 8090 # Service port
      targetPort: 80 # Container port
      nodePort: 30009
  type: NodePort
