k8s/service-nginx.yml
apiVersion: v1
kind: Service
metadata:
  name: mi-servicio-nginx
  namespace: default
spec:
  selector:
    app: mi-nginx-app
  ports:
    - protocol: TCP
      port: 443 # Service port
      targetPort: 80 # Container port
      nodePort: 30443
  type: NodePort
