k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: mi-servicio
  namespace: default
spec:
  selector:
    app: mi-app
  ports:
    - protocol: TCP
      port: 8443
      targetPort: 8080
      nodePort: 30007
  type: NodePort
