k8s/destination-rule-apache.yml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: mi-servicio-destination-apache
  namespace: default
spec:
  host: mi-servicio-apache.default.svc.cluster.local
  subsets:
    - name: v1
      labels:
        version: v1
  trafficPolicy:
    loadBalancer:
      simple: ROUND_ROBIN
