k8s/virtual-service-apache.yml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: my-virtualservice-apache
  namespace: default
spec:
  hosts:
    - "*"
  gateways:
    - istio-system/internal-gateway
  http:
    - match:
        - uri:
            prefix: /
          port: 443
      route:
        - destination:
            host: mi-servicio-apache.default.svc.cluster.local
            subset: v1
            port:
              number: 8090 # Service port
