k8s/virtual-service-nginx.yml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: my-virtualservice-nginx
  namespace: default
spec:
  hosts:
    - "dev.example.local"
  gateways:
    - istio-system/internal-gateway
  http:
    - match:
        - uri:
            prefix: /
          port: 443
      route:
        - destination:
            host: mi-servicio-nginx.default.svc.cluster.local
            subset: v1
            port:
              number: 443 # Service port
