k8s/virtual-service.yml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: my-virtualservice
  namespace: default
spec:
  hosts:
    - "api.josedaniel.live"
  gateways:
    - istio-system/internal-gateway
  http:
    - match:
        - uri:
            prefix: /api/{ pais, persona, ciudad }
        - uri:
            prefix: /
          port: 443
      route:
        - destination:
            host: mi-servicio.default.svc.cluster.local
            subset: v1
            port:
              number: 8443
